tests/errors/parser/invalid-width2.futil
component main() -> () {
  cells { }
  wires {
    r.in = 5'xaa;
  }
  control { }
}
