tests/errors/parser/invalid-width2.expect
---CODE---
1
---STDERR---
Error: Failed to parse `tests/errors/parser/invalid-width2.futil`:  --> 4:12
  |
4 |     r.in = 5'xaa;
  |            ^---^
  |
  = Cannot represent given literal 'aa' in 5 bits
